<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">670704856368123</string>
    <string name="app_name">Raw Cat Care</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pet_status">View pet</string>
    <string name="appTitle">Cat Care</string>
    <string name="new_cat">New cat</string>
    <string name="title_activity_create_cat">CreateCatActivity</string>
    <string name="add_image">Add photo</string>
    <string name="cat_name">Name:</string>
    <string name="breed">Breed:</string>
    <string name="save_cat">Save cat</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="cat_gender">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="neutered">Neutered</string>
    <string name="weight">Current weight:</string>
    <string name="activity_level">Activity level:</string>
    <string name="title_activity_weekly_menu">Weekly menus</string>
    <string name="title_activity_daily_menu">Daily menus</string>
    <string name="new_menu">New menu</string>
    <string name="initialMealLabel">Meal 1</string>
    <string name="title_activity_pet_status">Cat info</string>
    <string name="toggle_quantity_amount">Toggle quantity/amount</string>
    <string name="enter_amount_in_weight">Enter amount in weight</string>
    <string name="enter_amount_in_quantity">Enter as quantity</string>
    <string name="or">OR</string>
    <string name="catcare_user_preferences">edu.lapinamk.holli.userpreferences</string>
    <string name="number_of_cats">catnumber</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="title_activity_daily_nutrition_review">DailyNutritionReviewActivity</string>
    <string name="title_activity_weekly_nutrition_review">Nutrition review</string>
    <string name="another_meal_button">Another meal</string>
    <string name="show_nutrition">Daily nutrition</string>
    <string name="monday">Monday</string>
    <string name="weight_in_grams">weight in grams</string>
    <string name="shape">Shape:</string>
    <string name="initMealLabel">Meal 1</string>
    <string name="feeding_time">Feeding time</string>
    <string name="title_activity_menu_view">Weekly menu</string>
    <string name="title_activity_menu_nutrition_review">Nutrition review</string>
    <string name="title_activity_daily_meals">Create menu</string>
    <string name="nursing_label">Nursing/pregnant</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="current_pet">current_pet</string>
    <string name="title_activity_view_weekly_meals">Weekly meals</string>
    <string name="weekly_nutrition"/>
    <string name="review_weekly_nutrition">Review weekly nutrition</string>
    <string name="edit_cat_button">Edit cat info</string>
    <string name="save_changes_button">Save changes</string>
    <string name="delete_cat_button">Delete cat</string>
    <string name="are_you_sure">Are you sure you want to delete</string>
    <string name="delete_menu">Delete menu</string>
    <string name="title_activity_edit_cat">Edit cat info</string>
    <string name="save_and_add_button">Save meal</string>
    <string name="edit_menu">Edit</string>
    <string name="delete">delete</string>
    <string name="add_meal">Add meal</string>
    <string name="shape_of_cat">Shape:</string>
    <string name="add_photo">Add photo</string>
    <string name="cat_avatar">Cat avatar</string>
    <string name="weight_label">Weight:</string>
</resources>
