<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/show_nutrition"
            android:id="@+id/showNutritionButton"
            android:layout_weight="1"/>
           <!-- android:onClick="showDailyNutritionReview"/-->

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/another_meal_button"
            android:id="@+id/newMealButton"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:onClick="saveMealToDb"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mealTab"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/initMealLabel"
                android:id="@+id/mealText"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/monday"
                android:id="@+id/weekDayView"
                android:layout_weight="1"
                android:gravity="right"/>

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meatTypeSpinner"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ediblePartSpinner"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editGrams"
                android:layout_weight="1"
                android:hint="@string/weight_in_grams"
                android:linksClickable="false"
                android:gravity="center_horizontal"
                android:maxLength="4"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/editFeedingTime"
            android:layout_gravity="center_horizontal"
            android:hint="feeding time"
            android:gravity="center_horizontal"
            android:singleLine="false"
            android:inputType="time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/caloriesView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/proteinView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/fatView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</RelativeLayout>
